--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,7 +23,8 @@ width: 170px;
 position: absolute;
 top: -20px;
 }
-.item{
+.containerCarrinhoNav .item{
+    display: none;
     background-color: #000;
 }
 .containerimgCarrinho{
@@ -105,7 +106,7 @@ text-align: center;
     justify-content: center;
     align-content: center;
     text-align: center;
-    width: 60px;
+    width: 80px;
     user-select: none;
 
 }
@@ -158,7 +159,7 @@ text-align: center;
     color: #ffd000;
 }
 
-#qtdCarrinho{
+.qtCarrinhonav{
     width: 50px;
     border: none;
     outline: none;
@@ -167,6 +168,9 @@ text-align: center;
     color: #ffd000;
     font-size: 18px;
     padding-left: 5px;
+    display: flex;
+    justify-content: center;
+    text-align: center;
 }
 #consultarPedido{
 border: none;
@@ -210,7 +214,7 @@ box-shadow: 1px 1px 2px 1px #000000;
 .containerCarrinhoNav {
 position: fixed;
 height: 100%;
-width: 400px;
+width: 450px;
 right: 10px;
 top: 150px;
 background-color: #0b0a0a8f;   
@@ -220,7 +224,6 @@ border-top-right-radius: 30px;
 border-bottom-left-radius: 30px;
 padding: 18px;
 display: flex;
-justify-content: space-between;
 flex-direction: column;
 }
 .containerCarrinhoNav > :first-child{
@@ -229,7 +232,6 @@ flex-direction: column;
 
 .comprar{
     display: flex;
-    justify-content: space-evenly;
     flex-direction: row;
     text-align: center;
     align-items: center;
@@ -238,8 +240,12 @@ flex-direction: column;
     font-weight: bolder;
     height: 90px;
     border-radius: 3px;
-
-
+    position: fixed;
+    bottom: 0;
+    
+}
+.comprar div{
+    margin: 10px;
 }
 
 
@@ -264,6 +270,7 @@ flex-direction: column;
     user-select: none;
     cursor: pointer;
     background-color: #E6B800;
+    width: 240px;
 }
 .btConfirmaCompra:hover{
     background-color: #ffd000;
@@ -309,7 +316,7 @@ box-shadow: 4px 5px 4px 1px #E6B800;
 margin-right: 20px;
 margin-bottom: 20px;
 }
-.itemLanche.molde{
+.itemLanche{
     display: none;
 }
 
@@ -317,6 +324,10 @@ margin-bottom: 20px;
 border-top-right-radius: 20px;
 border-bottom-left-radius: 20px;
 box-shadow: 4px 5px 4px 1px #E6B800;
+}
+.imgIndividual{
+    height: 180px;
+    width: 180px;
 }
 
 .itemLanche:hover {
@@ -398,7 +409,7 @@ display: flex;
 background-color: #151515fa;
 margin: auto;
 width: 680px;
-height: 350px;
+height: 340px;
 display: flex;
 justify-content: space-around;
 padding: 10px;
@@ -446,9 +457,9 @@ box-shadow: 3px 3px 5px 1px #ffd000;
 
 .infoLancheModal {
 width: 100%;
-height: 350px;
+height: 390px;
 display: flex;
-justify-content: center;
+justify-content: space-evenly;
 flex-direction: column;
 text-align: center;
 align-items: center;
@@ -462,7 +473,11 @@ height: 130px;
 .btnContainerModal {
 display: flex;
 justify-content: center;
-margin-top: 20px;
+margin-top: -20px;
+
+}
+.btnContainerModal div {
+    margin-left: 5px;
 }
 
 .nomeLancheModal {
@@ -490,6 +505,7 @@ align-items: center;
 justify-content: space-evenly;
 font-size: 40px;
 font-weight: bolder;
+
 }
 
 .btnMais, .btnMenos {
