--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -439,7 +439,15 @@ border-radius: 5px;
 position: relative;
 box-shadow: 0px 3px 10px 1px #E6B800;
 user-select: none;
+opacity: 0;
+transform: scale(0.4);
+transition: all 0.3s ease;
 }
+.ativo{
+    opacity: 1;
+    transform: scale(1);
+}
+
 
 .itemLancheModal:hover {
 box-shadow: 0px 3px 7px 2px #ffd000;
