--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,10 +27,10 @@ top: -20px;
 .containerCarrinhoNav .item{
     display: none;
     background-color: #000;
-    position: relative;
-    
-    
+    position: relative;  
 }
+
+
 
 .excluirItem{
     position: absolute;
@@ -223,22 +223,74 @@ font-weight: bolder;
 font-size: 16px;
 }
 
-.botaoConsultaPedido {
-border: none;
-height: 32px;
-width: 90px;
-border-top-right-radius: 15px;
-border-bottom-left-radius: 15px;
-cursor: pointer;
-background: #E6B800;
-font-weight: bolder;
-font-size: 16px;
+.containerImgUser {
+    padding: 2px;
+    margin-top: 20px;
+    font-weight: bold;
+    user-select: none;
+    color: #0b0b0b;
+
+
+}
+.containerImgUser:hover{
+    box-shadow: 0px 1px 5px 2px #f8b600;
+}
+.containerImgUser span{
+    cursor: pointer;
 }
 
-.botaoConsultaPedido:hover{
-box-shadow: 1px 1px 2px 1px #000000;
+.login label{
+    color: #ffd000;
+
+}
+.login {
+    height: 200px;
+    width: 200px;
+    background-color: #000;
+    position: absolute;
+    top: 100px;
+    right:120px;
+    display: flex;
+    flex-direction: column;
+    padding: 5px;    
+    border-radius: 5px;
+}
+.login input{
+    height: 30px;
+    border: none;
+    border-radius: 3px;
+    margin-bottom: 5px;
+    padding-left: 10px;
 }
 
+#entrar{
+    margin: auto;
+    width: 70px;
+    height: 35px;
+    padding: 5px;
+    border: none;
+    font-weight: bolder;
+    background-color: #ffd000;
+    border-radius: 3px;
+    cursor: pointer;
+}
+
+
+.containerImgUser img{
+    height: 20px;
+    margin-right: 5px;
+}
+
+.lembrarSenha{
+    border: none;
+    width: 105px;
+    background-color: #ff0000;
+    color: #fff;
+    border-radius: 3px;
+    padding: 2px;
+    user-select: none;
+    cursor: pointer;
+}
 .containerCarrinhoNav {
 position: fixed;
 bottom: 0;
@@ -258,7 +310,23 @@ transition: all 0.3s ease;
 overflow-y: auto;
 padding-bottom: 100px;
 }
+/* Chrome, Edge, Safari */
+.containerCarrinhoNav::-webkit-scrollbar {
+    width: 10px;
+}
 
+.containerCarrinhoNav::-webkit-scrollbar-track {
+    background-color: #444; /* trilho (fundo) */
+}
+
+.containerCarrinhoNav::-webkit-scrollbar-thumb {
+    background-color: #ffd000; /* cor da barra que desliza */
+    border-radius: 4px;
+}
+
+.containerCarrinhoNav::-webkit-scrollbar-thumb:hover {
+    background-color: #888; /* cor ao passar o mouse */
+}
 
 .comprar{
     display: flex;
@@ -278,7 +346,7 @@ padding-bottom: 100px;
     display: none;
 
     opacity: 0;
-    transform: scale(0.8);
+    transform: scale(0.4);
     transition: all 0.3 ease;
 }
 .comprar div{
