--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,13 +15,24 @@ font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans
 }
 
 footer {
-background-color: #ffd000;
+    background-color: #000;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    font-size: 13px;
+    box-shadow: 1px 1px 4px 3px #ffd000;
+}
+
+footer img{
+    align-items: center;
+    height: 60px;
+
 }
 
 .logo {
 width: 170px;
-position: absolute;
-top: -20px;
+position: relative;
 }
 
 .containerCarrinhoNav .item{
@@ -29,7 +40,9 @@ top: -20px;
     background-color: #000;
     position: relative;  
 }
-
+.containerimgCarrinho{
+    margin-top:20px ;
+}
 
 
 .excluirItem{
@@ -75,6 +88,7 @@ background-color: #ffd000;
 color: #000;
 padding-right: 10px;
 height: 140px;
+
 
 }
 #cartimg{
@@ -230,13 +244,17 @@ font-size: 16px;
     user-select: none;
     color: #0b0b0b;
 
-
 }
 .containerImgUser:hover{
     box-shadow: 0px 1px 5px 2px #f8b600;
 }
 .containerImgUser span{
     cursor: pointer;
+}
+
+.containerLogin {
+    position: relative;
+
 }
 
 .login label{
@@ -248,12 +266,12 @@ font-size: 16px;
     width: 200px;
     background-color: #000;
     position: absolute;
-    top: 100px;
-    right:120px;
     display: flex;
     flex-direction: column;
     padding: 5px;    
     border-radius: 5px;
+    position: absolute;
+    left: -35px;
 }
 .login input{
     height: 30px;
@@ -425,6 +443,9 @@ margin-right: 20px;
 margin-bottom: 20px;
 display: none;
 }
+.itemLanche .desc{
+    display: none;
+}
 
 
 .itemLanche img:not(.containerImgImagemBotao img) {
@@ -486,6 +507,11 @@ width: 25px;
 padding: 1px;
 background-color: black;
 border-top-left-radius: 10px;
+}
+
+.descModal{
+    color: #ff0000;
+    font-size: 12px;
 }
 /* ======================================== */
 /* FIM CONFIGURAÇÃO SECTION LANCHE  */
@@ -775,6 +801,7 @@ height: 40px;
     justify-content: center;
     flex-direction: column;
     align-items: center;
+
 }
 .pagamentoPix img {
     background-color: #000;
@@ -785,3 +812,300 @@ height: 40px;
 /* ======================================== */
 /* FIM DA CONFIGURAÇÁO DO PAGAMENTO   */
 /* ======================================== */
+
+@media(max-width:400px){
+    body{
+        display: none;
+    }
+}
+
+@media (min-width:1760px){
+    body{
+        display: none;
+        
+    }
+
+}
+
+
+/*CONFIGURAÇÃO DO NAV*/
+@media(min-width:400px ) and (max-width:490px){
+    #containerNavTop {
+        width: 100vw;
+        background-color: #ffd000;
+
+    }
+
+    #containerNavTop {
+        justify-content: space-between;
+        align-items: center;
+        height: 82px;
+    }
+    .containerimgCarrinho{
+        margin-top: 20px;
+    }
+
+    #consultarPedido{
+        border: none;
+        outline: none;
+        height: 30px;
+        width: 200px;
+        padding: 0;
+
+    }
+    .comprar {
+        width: 390px;
+    }
+
+    #consultarPedido::placeholder{
+        font-size: 10px;
+    }
+
+    .consultarPedido label{
+        font-size: 13px;
+        
+    }
+
+    .menuNav img{
+        position: relative;
+        height: 90px;
+        width: 90px;
+
+    }
+
+    .containerImgUser {
+        padding: 2px;
+        margin-top: 25px;
+        font-weight: bold;
+        user-select: none;
+        color: #0b0b0b;
+        font-size: 13px;
+
+    }
+    .containerImgUser span {
+        display: none;
+    }
+
+    .login {
+        left: -142px;
+        top: 60px;
+    }
+    .containerCarrinhoNav {
+        width:100%;
+    }
+
+    /*SECTION LANCHE */
+    .sectionLanche{
+        padding-left: 20px;
+
+    }
+
+    .itemLanche {
+        min-width: 180px;
+        height: 130px;
+ 
+    }
+    .containerTituloInfoLanche {
+        font-size: 13px;
+    }
+
+    .itemLanche img {
+        height: 100px;
+        width: 100px;
+    }
+    .imgBotaoAbrirModal{
+        height: 30px;
+        width: 110px;
+        font-size: 14px;
+
+    }
+    .containerImgImagemBotao{
+        height: 27px;
+
+    }
+    .containerImgImagemBotao img {
+        height: 20px;
+        width: 20px;
+    }
+ 
+    /*MODAL */
+
+    .itemLancheModal {
+        width: 350px;
+        height: 450px;
+        flex-direction: column;
+        justify-content: space-evenly;
+    }
+    .itemLancheModal img{
+        width: 170px;
+        height: 170px;
+    }
+
+    .infoLancheModal .containerTituloInfoLancheModal .nomeLancheModal {
+        font-size: 15px;
+    }
+    .qtItem {
+        width: 100%;
+    }
+    .inputCmodal{
+        width: 50px;
+    }
+    .btnContainerModal{
+        width: 100%;
+        display: flex;
+        justify-content: space-evenly;
+    }
+    .btnContainerModal .botaoModal{
+        width: 110px;
+        font-size: 12px;
+        font-weight: bolder;
+    }
+    .valorIndividualModal{
+        display: flex;
+        font-size: 13px;
+
+    }
+
+}
+
+
+
+/*CONFIGURAÇÃO DO NAV*/
+@media(min-width:490px) and (max-width:680px){
+    #containerNavTop {
+        width: 100vw;
+        background-color: #ffd000;
+
+    }
+
+    #containerNavTop {
+        justify-content: space-between;
+        align-items: center;
+        height: 82px;
+    }
+
+    #consultarPedido{
+        border: none;
+        outline: none;
+        height: 30px;
+        width: 250px;
+        padding: 0;
+
+    }
+
+    #consultarPedido::placeholder{
+        font-size: 10px;
+    }
+
+    .consultarPedido label{
+        font-size: 13px;
+        
+    }
+
+    .menuNav img{
+        position: relative;
+        height: 90px;
+        width: 90px;
+
+    }
+
+    .containerImgUser {
+        padding: 2px;
+        margin-top: 25px;
+        font-weight: bold;
+        user-select: none;
+        color: #0b0b0b;
+        font-size: 13px;
+
+    }
+
+    .login {
+        left: -90px;
+        top: 60px;
+    }
+    .containerImgUser {
+        display: block;
+    }
+
+    /*SECTION LANCHE */
+    .sectionLanche{
+        padding-left: 20px;
+
+    }
+
+    .itemLanche {
+        min-width: 180px;
+        height: 130px;
+ 
+    }
+    .containerTituloInfoLanche {
+        font-size: 13px;
+    }
+
+    .itemLanche img {
+        height: 100px;
+        width: 100px;
+    }
+    .imgBotaoAbrirModal{
+        height: 30px;
+        width: 110px;
+        font-size: 14px;
+
+    }
+    .containerImgImagemBotao{
+        height: 27px;
+
+    }
+    .containerImgImagemBotao img {
+        height: 20px;
+        width: 20px;
+    }
+ 
+    /*MODAL */
+
+    .itemLancheModal {
+        width: 350px;
+        height: 450px;
+        flex-direction: column;
+        justify-content: space-evenly;
+    }
+    .itemLancheModal img{
+        width: 170px;
+        height: 170px;
+    }
+
+    .infoLancheModal .containerTituloInfoLancheModal .nomeLancheModal {
+        font-size: 15px;
+    }
+    .qtItem {
+        width: 100%;
+    }
+    .inputCmodal{
+        width: 50px;
+    }
+    .btnContainerModal{
+        width: 100%;
+        display: flex;
+        justify-content: space-evenly;
+    }
+    .btnContainerModal .botaoModal{
+        width: 110px;
+        font-size: 12px;
+        font-weight: bolder;
+    }
+    .valorIndividualModal{
+        display: flex;
+        font-size: 13px;
+
+    }
+
+}
+
+
+
+
+
+
+
+
+
